force-app/main/default/objects/ADM_Work__c/fields/Log_Bug_From_Template__c.field-meta.xml
<CustomField>
    <fullName>Log_Bug_From_Template__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Id + &quot;/e?clone=1&amp;RecordTypeLogicalName=Bug&quot;, &quot;Log Bug From Template&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Bug From Template</label>
    <type>Text</type>
</CustomField>