force-app/main/default/objects/ADM_Work__c/fields/Major_Func_Area__c.field-meta.xml
<CustomField>
    <fullName>Major_Func_Area__c</fullName>
    <label>Major Func Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>.NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>