force-app/main/default/objects/ADM_Work__c/fields/Major_Release__c.field-meta.xml
<CustomField>
    <fullName>Major_Release__c</fullName>
    <formula>IF(CONTAINS(Scheduled_Build_Name__c, &quot;.&quot;),LEFT(Scheduled_Build_Name__c, FIND(&quot;.&quot;, Scheduled_Build_Name__c)-1),Scheduled_Build_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Release</label>
    <type>Text</type>
</CustomField>