force-app/main/default/objects/ADM_Work__c/fields/Minor_Func_Area__c.field-meta.xml
<CustomField>
    <fullName>Minor_Func_Area__c</fullName>
    <label>Minor Func Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>