force-app/main/default/objects/ADM_Work__c/fields/Mobile_Device__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device__c</fullName>
    <label>Mobile Device</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Android Other</fullName>
            </value>
            <value>
                <fullName>Dell Windows Tablet</fullName>
            </value>
            <value>
                <fullName>Galaxy 4</fullName>
            </value>
            <value>
                <fullName>Galaxy 5</fullName>
            </value>
            <value>
                <fullName>Galaxy Note 2</fullName>
            </value>
            <value>
                <fullName>Galaxy Note3</fullName>
            </value>
            <value>
                <fullName>Galaxy S3</fullName>
            </value>
            <value>
                <fullName>HTC Windows Phone 8x</fullName>
            </value>
            <value>
                <fullName>iOS Other</fullName>
            </value>
            <value>
                <fullName>iPad 4</fullName>
            </value>
            <value>
                <fullName>iPad Air</fullName>
            </value>
            <value>
                <fullName>iPad Air 2</fullName>
            </value>
            <value>
                <fullName>iPad Mini 4</fullName>
            </value>
            <value>
                <fullName>iPad Pro</fullName>
            </value>
            <value>
                <fullName>iPhone 5</fullName>
            </value>
            <value>
                <fullName>iPhone 5S</fullName>
            </value>
            <value>
                <fullName>iPhone 6</fullName>
            </value>
            <value>
                <fullName>iPhone 6 Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 6S</fullName>
            </value>
            <value>
                <fullName>iPhone 6S Plus</fullName>
            </value>
            <value>
                <fullName>Nexus 10</fullName>
            </value>
            <value>
                <fullName>Nexus 4</fullName>
            </value>
            <value>
                <fullName>Nexus 5</fullName>
            </value>
            <value>
                <fullName>Nexus 7</fullName>
            </value>
            <value>
                <fullName>Nokia 1020</fullName>
            </value>
            <value>
                <fullName>Nokia Lumia 1020</fullName>
            </value>
            <value>
                <fullName>Nokia Lumia 1520</fullName>
            </value>
            <value>
                <fullName>Nokia Lumia 635</fullName>
            </value>
            <value>
                <fullName>Nokia Lumia 900</fullName>
            </value>
            <value>
                <fullName>Nokia Lumia 920</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>