force-app/main/default/objects/ADM_Work__c/fields/Mobile_Network__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Network__c</fullName>
    <label>Mobile Network</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WiFi 4G/LTE</fullName>
            </value>
            <value>
                <fullName>3G</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Offline/Airplane mode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>