force-app/main/default/objects/ADM_Work__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Module(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccountAdmin</fullName>
            </value>
            <value>
                <fullName>AccountApplication</fullName>
            </value>
            <value>
                <fullName>AccountCopy</fullName>
            </value>
            <value>
                <fullName>AccountNotificationLookup</fullName>
            </value>
            <value>
                <fullName>AccountRenewal</fullName>
            </value>
            <value>
                <fullName>AccountTypeConversionUtility</fullName>
            </value>
            <value>
                <fullName>AccountUserAdmin</fullName>
            </value>
            <value>
                <fullName>AccountUserPermissionAssignment</fullName>
            </value>
            <value>
                <fullName>AkamaiUtility</fullName>
            </value>
            <value>
                <fullName>AlohaLogin</fullName>
            </value>
            <value>
                <fullName>APIAuthCheck</fullName>
            </value>
            <value>
                <fullName>ApplicationAssignment</fullName>
            </value>
            <value>
                <fullName>ApplySKUToAccount</fullName>
            </value>
            <value>
                <fullName>AudienceBuilderConfig</fullName>
            </value>
            <value>
                <fullName>AutomatedNotificationTemplateEditor</fullName>
            </value>
            <value>
                <fullName>AutomationsConfig</fullName>
            </value>
            <value>
                <fullName>BillingUtilizationType</fullName>
            </value>
            <value>
                <fullName>BrandTagAssignment</fullName>
            </value>
            <value>
                <fullName>BrandTags</fullName>
            </value>
            <value>
                <fullName>BulkAccountCreate</fullName>
            </value>
            <value>
                <fullName>BulkAccountCreateThreaded</fullName>
            </value>
            <value>
                <fullName>BulkReturnPathIntegrator</fullName>
            </value>
            <value>
                <fullName>BulkUserCreate</fullName>
            </value>
            <value>
                <fullName>BulkUserSetup</fullName>
            </value>
            <value>
                <fullName>BusinessRuleAdmin</fullName>
            </value>
            <value>
                <fullName>BusinessRuleAssignment</fullName>
            </value>
            <value>
                <fullName>BusinessRules</fullName>
            </value>
            <value>
                <fullName>BusinessUnitRolesAndUsers</fullName>
            </value>
            <value>
                <fullName>ClientSpecificConfigurationSettings</fullName>
            </value>
            <value>
                <fullName>CreateDemo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>