force-app/main/default/objects/ADM_Work__c/fields/Number_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of cases associated with this Work record.</inlineHelpText>
    <label>Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>