force-app/main/default/objects/ADM_Work__c/fields/Number_of_SLA_Violations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SLA_Violations__c</fullName>
    <label>Number of T&amp;P SLA Violations</label>
    <summaryFilterItems>
        <field>SLA_Violation__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Support</value>
    </summaryFilterItems>
    <summaryForeignKey>SLA_Violation__c.Work__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>