force-app/main/default/objects/ADM_Work__c/fields/Number_of_Tests_Classes_affected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tests_Classes_affected__c</fullName>
    <label>Number of Tests/Classes affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>