force-app/main/default/objects/ADM_Work__c/fields/of_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>of_Test_Failures__c</fullName>
    <label>Test Failures Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>