force-app/main/default/objects/ADM_Work__c/fields/Out_of_SLA__c.field-meta.xml
<CustomField>
    <fullName>Out_of_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of SLA</label>
    <type>Checkbox</type>
</CustomField>