force-app/main/default/objects/ADM_Work__c/fields/Partner_Plan__c.field-meta.xml
<CustomField>
    <fullName>Partner_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link necessary to create a Work from a Partner Plan</description>
    <label>Partner Plan</label>
    <referenceTo>Partner_Plan__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>