force-app/main/default/objects/ADM_Work__c/fields/Preserve_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Preserve_Formatting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Formatting</label>
    <type>Checkbox</type>
</CustomField>