force-app/main/default/objects/ADM_Work__c/fields/Preserve_Formatting_Copy__c.field-meta.xml
<CustomField>
    <fullName>Preserve_Formatting_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Formatting Copy</label>
    <type>Checkbox</type>
</CustomField>