force-app/main/default/objects/ADM_Work__c/fields/Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Comments__c</fullName>
    <label>transfer Previous Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>