force-app/main/default/objects/ADM_Work__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>For bugs, priority is automatically determined based upon the combination of Impact and Frequency.

For user stories, P0 represents the highest priority, P4 the lowest.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
                <color>#0B6FCE</color>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <color>#FF0000</color>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <color>#E27001</color>
                <label>P2</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <color>#FFFF66</color>
                <label>P3</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <color>#78C953</color>
                <label>P4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>