force-app/main/default/objects/ADM_Work__c/fields/Priority_Default__c.field-meta.xml
<CustomField>
    <fullName>Priority_Default__c</fullName>
    <description>Used to store what the previous priority value might have been for reporting purposes.</description>
    <label>Priority (default)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>