force-app/main/default/objects/ADM_Work__c/fields/Priority_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Priority_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority Mapping</label>
    <referenceTo>ADM_Priority_Mapping__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>