force-app/main/default/objects/ADM_Work__c/fields/Priority_Mapping_Copy__c.field-meta.xml
<CustomField>
    <fullName>Priority_Mapping_Copy__c</fullName>
    <label>Priority Mapping Copy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>