force-app/main/default/objects/ADM_Work__c/fields/Priority_Override_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override_Explanation__c</fullName>
    <label>Priority Override Explanation</label>
    <type>TextArea</type>
</CustomField>