force-app/main/default/objects/ADM_Work__c/fields/Priority_Override_Explanation_Copy__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override_Explanation_Copy__c</fullName>
    <description>used to temporarily store the contents of the priority override explanation to create a new record</description>
    <label>Priority Override Explanation Copy</label>
    <type>TextArea</type>
</CustomField>