force-app/main/default/objects/ADM_Work__c/fields/Priority_Rank__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rank__c</fullName>
    <label>Backlog Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>