force-app/main/default/objects/ADM_Work__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>