force-app/main/default/objects/ADM_Work__c/fields/Product_Child__c.field-meta.xml
<CustomField>
    <fullName>Product_Child__c</fullName>
    <description>Used only by the Clients team. Dependent on the Product Area picklist.</description>
    <inlineHelpText>Used only by the Clients team. Dependent on the Product Area picklist.</inlineHelpText>
    <label>Product Child</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AXIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>