force-app/main/default/objects/ADM_Work__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you leave it empty on save you will be the Product Owner</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>