force-app/main/default/objects/ADM_Work__c/fields/Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TE Activity</label>
    <referenceTo>ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Product_Tag</relationshipName>
    <type>Lookup</type>
</CustomField>