force-app/main/default/objects/ADM_Work__c/fields/Product_Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Tag_Name__c</fullName>
    <description>Returns the name of the product tag</description>
    <formula>Product_Tag__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Tag Name</label>
    <type>Text</type>
</CustomField>