force-app/main/default/objects/ADM_Work__c/fields/QA_Engineer__c.field-meta.xml
<CustomField>
    <fullName>QA_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Engineer</relationshipName>
    <type>Lookup</type>
</CustomField>