force-app/main/default/objects/ADM_Work__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Record(Deprecated)</label>
    <type>Text</type>
</CustomField>