force-app/main/default/objects/ADM_Work__c/fields/Red_Account__c.field-meta.xml
<CustomField>
    <fullName>Red_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Account</label>
    <type>Checkbox</type>
</CustomField>