force-app/main/default/objects/ADM_Work__c/fields/Regressed__c.field-meta.xml
<CustomField>
    <fullName>Regressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regressed</label>
    <type>Checkbox</type>
</CustomField>