force-app/main/default/objects/ADM_Work__c/fields/Related_URL__c.field-meta.xml
<CustomField>
    <fullName>Related_URL__c</fullName>
    <label>Related URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>