force-app/main/default/objects/ADM_Work__c/fields/Related_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_URL_Link__c</fullName>
    <formula>HYPERLINK(Related_URL__c, Related_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related URL Link</label>
    <type>Text</type>
</CustomField>