force-app/main/default/objects/ADM_Work__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>