force-app/main/default/objects/ADM_Work__c/fields/Request_RD_Mgr_Review__c.field-meta.xml
<CustomField>
    <fullName>Request_RD_Mgr_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Senior Mgr Review</label>
    <type>Checkbox</type>
</CustomField>