force-app/main/default/objects/ADM_Work__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>App Bug Fix - TF caught a product bug&lt;br&gt;
TC: Due to app changes - Test changed b/c app behavior changed&lt;br&gt;
TC: Test issue only - Test needed fixing&lt;br&gt;
More: search Google Sites for &quot;test resolution&quot;</inlineHelpText>
    <label>Test Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>App Bug Fix</fullName>
            </value>
            <value>
                <fullName>Test Change: Due to app changes</fullName>
            </value>
            <value>
                <fullName>Test Change: Test issue only</fullName>
            </value>
            <value>
                <fullName>Test Removed/Disabled</fullName>
            </value>
            <value>
                <fullName>Duplicate Test Failure</fullName>
            </value>
            <value>
                <fullName>Not Reproducible: Autobuild environment issue</fullName>
            </value>
            <value>
                <fullName>Not Reproducible: SauceLabs issue</fullName>
            </value>
            <value>
                <fullName>Not Reproducible: Broken By Another Team</fullName>
            </value>
            <value>
                <fullName>Not Reproducible: Unknown</fullName>
            </value>
            <value>
                <fullName>Not Reproducible: Other (please specify in Chatter feed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>