force-app/main/default/objects/ADM_Work__c/fields/Root_Cause_Analysis_2__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to a related Root Cause Analysis record.</description>
    <label>Root Cause Analysis</label>
    <referenceTo>RCA__c</referenceTo>
    <relationshipLabel>Work &amp; Action Plan</relationshipLabel>
    <relationshipName>Work1</relationshipName>
    <type>Lookup</type>
</CustomField>