force-app/main/default/objects/ADM_Work__c/fields/S1_App_Build_Number__c.field-meta.xml
<CustomField>
    <fullName>S1_App_Build_Number__c</fullName>
    <inlineHelpText>Find the build number in the settings of the S1 Hybrid app</inlineHelpText>
    <label>S1 App Build Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>