force-app/main/default/objects/ADM_Work__c/fields/Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Scheduled Build field is a lookup to the Build object.  Enter a pre-existing build where the change will be made.</inlineHelpText>
    <label>Scheduled Build</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Work (Scheduled Build)</relationshipLabel>
    <relationshipName>Scheduled_Build</relationshipName>
    <type>Lookup</type>
</CustomField>