force-app/main/default/objects/ADM_Work__c/fields/Scheduled_Build_Copy__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build_Copy__c</fullName>
    <label>Scheduled Build Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>