force-app/main/default/objects/ADM_Work__c/fields/Scheduled_Build_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build_Name__c</fullName>
    <formula>Scheduled_Build__r.Name</formula>
    <label>Scheduled Build Name</label>
    <type>Text</type>
</CustomField>