force-app/main/default/objects/ADM_Work__c/fields/Scheduled_Build_Rank__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build_Rank__c</fullName>
    <label>Rank in a scheduled build for team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>