force-app/main/default/objects/ADM_Work__c/fields/Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On__c</fullName>
    <description>Deprecated field from BF 1.0</description>
    <label>Scheduled On</label>
    <type>Date</type>
</CustomField>