force-app/main/default/objects/ADM_Work__c/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Schema Change</label>
    <type>Checkbox</type>
</CustomField>