force-app/main/default/objects/ADM_Work__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>