force-app/main/default/objects/ADM_Work__c/fields/Scrum_Team_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team_Last_Modified__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Stores the last time the Scrum Team field was modified</description>
    <inlineHelpText>Stores the last time the Scrum Team field was modified</inlineHelpText>
    <label>Scrum Team Last Modified</label>
    <type>DateTime</type>
</CustomField>