force-app/main/default/objects/ADM_Work__c/fields/Scrumforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Scrumforce_ID__c</fullName>
    <externalId>true</externalId>
    <label>Scrumforce ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>