force-app/main/default/objects/ADM_Work__c/fields/Senior_Management_POC__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who gets engaged when an escalation of the current investigation occurs</description>
    <inlineHelpText>The person who gets engaged when an escalation of the current investigation occurs</inlineHelpText>
    <label>Senior Management POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work5</relationshipName>
    <type>Lookup</type>
</CustomField>