force-app/main/default/objects/ADM_Work__c/fields/Severity_Copy__c.field-meta.xml
<CustomField>
    <fullName>Severity_Copy__c</fullName>
    <label>Severity Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>