force-app/main/default/objects/ADM_Work__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#000099</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#990000</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FF6600</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#F3D904</color>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>