force-app/main/default/objects/ADM_Work__c/fields/Solution_Overview__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Overview</label>
    <referenceTo>ADM_Solution_Overview__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>