force-app/main/default/objects/ADM_Work__c/fields/Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Name__c</fullName>
    <formula>Sprint__r.Name</formula>
    <label>Sprint Name</label>
    <type>Text</type>
</CustomField>