force-app/main/default/objects/ADM_Work__c/fields/Sprint_Rank__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Rank__c</fullName>
    <label>Rank of this work item in a sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>