force-app/main/default/objects/ADM_Work__c/fields/Sprint_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Timeframe__c</fullName>
    <description>The first 8 characters of the sprint name</description>
    <formula>trim(LEFT(Sprint__r.Name,8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Timeframe YYYY.MMx</label>
    <type>Text</type>
</CustomField>